[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "zaby-sdk"
version = "0.1.0"
description = "Python SDK for the Zaby Agentic OS."
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.27.0",
]
keywords = ["zaby", "agentic-os", "agents", "mcp", "knowledge-base", "sdk"]

[project.urls]
Homepage = "https://github.com/ZABY-AI/zaby-sdk-python"

[project.optional-dependencies]
test = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24.0",
    "pytest-httpx>=0.30.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/zaby"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
